--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.feature.development": "1.0.2",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.25",
+    "com.unity.inputsystem": "1.8.2",
     "com.unity.test-framework": "1.4.4",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
